# Fractaler

./: CMakeLists.txt  README.md  imgui.ini
Fractaler/: CMakeLists.txt
Fractaler/res/ComputeShaders/: test.compute
Fractaler/src/: FractalerApp.cpp
GLCompute/: CMakeLists.txt
GLCompute/res/ComputeShaders/: test.compute
GLCompute/src/: GLCompute.cpp  Texture.h
GLCompute/src/Utils/Resources/: Resources.cpp  Resources.h
